drag fixtures to music create cue, fixed space and z-indexes

--- a/src/renderer/components/App.scss
+++ b/src/renderer/components/App.scss
@@ -25,7 +25,7 @@ input {
 
 .appWrapper {
     margin: 0 auto;
-    // min-height: 98vh;
+    min-height: 100vh;
     // height: 100%;
     display: grid;
     grid-template-areas:
@@ -56,8 +56,8 @@ input {
 .contentWorkspaceWrapper{
     grid-area: maincues;
     display: grid;
-    grid-template-areas: "main cues"; 
-    grid-template-rows: 1fr 20%; 
+    grid-template-areas: "main cues";
+    grid-template-rows: 1fr 20%;
     grid-template-columns: 1.2fr 1fr;
     position: relative;
     top: -2px;
@@ -69,7 +69,7 @@ input {
     align-content: center;
     justify-content: center;
     align-items: center;
-    height: 68vh;    
+    height: 68vh;
     width: 69vw;
     overflow-x: hidden;
 }
