--- a/src/renderer/components/TimeLineWorkspace/CueTimeLineItem/CueLine.scss
+++ b/src/renderer/components/TimeLineWorkspace/CueTimeLineItem/CueLine.scss
@@ -30,7 +30,6 @@
     cursor: pointer;
 }
 .cueLineContainer {
-    z-index: 22;
     position: absolute;
     width: 100%;
     top: 0;
